--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "core-js": "^3.27.2",
+    "echarts": "^5.4.1",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
     "jssha": "^3.2.0",
